# Boost-Platform-CS16

./: .gitignore  README.md
client/: client.sln  client.vcxproj  main.cpp
hl_redirect/: CMaekeLists.txt  ConfigReader.cpp  ConfigReader.h  FakeServer.cpp  FakeServer.h  Redirect.cpp  Redirect.h  Server.cpp  Server.h  Socket.cpp  Socket.h  hl_redirect.sln  hl_redirect.vcxproj  hl_redirect.vcxproj.filters  main.cpp  server_names.txt
iptables_rules_for_old/: cr_rls.sh  del_rls.sh  start_servers.sh  stop_servers.sh
new/ConnectionCreator/: Client.cs  ConnectionCreator.cs  ConnectionCreator.sln
new/SteamFake/: CMakeLists.txt
new/SteamFake/src/: main.cpp
new/boost platform/platform/: CMakeLists.txt
new/boost platform/platform/src/: console.cpp  console.hpp  data_parser.cpp  data_parser.hpp  fake_server.cpp  fake_server.hpp  globals.cpp  globals.hpp  main.cpp  masterserver.cpp  masterserver.hpp  socket.cpp  socket.hpp  sv_steam3.cpp  sv_steam3.hpp
new/platform/: CMakePresets.json
sursa redirecte/: Csocket.cpp  Csocket.h  DataParser.cpp  GoldSRCPacketDecoder.vcxproj  GoldSRCPacketDecoder.vcxproj.filters  GoldSrcFakeServer.cpp  GoldSrcFakeServer.rc  GoldSrcFakeServer.sln  GoldSrcFakeServerr.cpp  RCa18732  Tools.cpp  bzip2.lib  gata facuts sv fake.rar  resource.h  stdafx.h  targetver.h  tools.h
sursa redirecte/Debug/: GoldSrcFakeServer.ilk  vc141.idb
sursa redirecte/Release/: 33din34.rar  39.rar  GoldSRCPacketDecoder.vcxproj.FileListAbsolute.txt  GoldSrcFakeServer.exe.recipe  GoldSrcFakeServer.iobj  GoldSrcFakeServer.ipdb  c.rar  d.rar  da.rar  f.rar  g.rar  (+5 more)
(+38 files in other folders)
